Revision history for File-Map

{{$NEXT}}

0.61      2013-10-04 21:36:19 Europe/Amsterdam
          Improve 64 bit pointer logic on Windows

0.60      2013-08-11 01:20:06 Europe/Amsterdam
          Upgrade dependency to Test::Warnings 0.005

0.59      2013-08-09 11:04:45 Europe/Amsterdam
          Explicitly depend on Test::Warnings 0.004

0.58      2013-08-08 23:18:15 Europe/Amsterdam
          Converted from Test::Exception to Test::Fatal
          Converted Test::Warn and Test::NoWarnings to Test::Warnings

0.57      2013-05-25 23:48:07 Europe/Amsterdam
          Use correct maximum length on 64-bit Windows
          Re-add perl version suggestions

0.56      2012-12-20 23:49:14 Europe/Amsterdam
          Don't run threading tests with tainting #82017
          Actually use ppport.h #82017

0.55      2012-12-14 14:04:49 Europe/Amsterdam
          Fix SV_CHECK_THINKFIRST_COW_DROP on 5.8.x

0.54      2012-12-13 23:47:47 Europe/Amsterdam
          Deal better with copy-on-write
          Remove Const::Fast dependency

0.53      2012-11-07 11:45:09 Europe/Amsterdam
          Switch to Sub::Exporter::Progressive
          Moved protection flags into XS

0.52      2012-07-17 18:10:48 Europe/Bucharest
          It's called HAS_STRERROR_R and not HAVE_STRERROR_R
          Make sure pTHX is available for sterror (5.8.7 compatibility)

0.51      2012-06-13 21:06:41 Europe/Amsterdam
          Remove threads.pm from dependencies
          Disable pin and unpin on VMS
          Enable compilation with -Werror=format-security

0.50      2012-05-01 22:37:41 Europe/Amsterdam
          Fix building on threadless Linux

0.49      2012-04-26 00:06:36 Europe/Amsterdam
          Revert to old error code on Windows

0.48      2012-04-23 02:27:01 Europe/Amsterdam
          Fix madvice on old cygwin versions
          Made strerror_r/strerror_s usage more robust

0.47      2012-04-04 23:17:55 Europe/Amsterdam