@@ -1,6 +1,7 @@
 Revision history for File-Map
 
 {{$NEXT}}
+          Reuse perl's reentrant API
 
 0.61      2013-10-04 21:36:19 Europe/Amsterdam
           Improve 64 bit pointer logic on Windows
